--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+  <div class="wrapper">
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -37,14 +38,15 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
+  </div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
+  <div class="wrapper-footer">
+    <div class="container">
+      <footer class="footer">
+        {% include svg-icons.html %}
+      </footer>
     </div>
+  </div>
 
     {% include analytics.html %}
   </body>
